--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,28 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: Roboto, Arial, Ubuntu, sasn-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #5c6369;
+}
+
+ul,
+li {
+  display: block;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
