--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,11 +1,60 @@
+.nav {
+  min-height: 70px;
+}
+
 .list {
   display: flex;
+  justify-content: space-between;
   list-style: none;
   color: #fff;
 }
 
+.item {
+  margin: 0 2rem 0 0;
+}
 .link {
   color: #fff;
-  padding: 0px 24px;
   text-decoration: none;
+}
+
+.link::after {
+  background-color: #fff;
+  display: block;
+  content: '';
+  height: 2px;
+  width: 0%;
+  transition: all 0.3s linear;
+}
+
+.link:hover::after {
+  width: 100%;
+}
+
+.active {
+  color: #3d3737;
+}
+
+.button {
+  width: 30px;
+  height: 2px;
+  background: white;
+}
+
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 100;
+}
+
+@media (min-width: 768px) {
+  .toggle {
+    display: none;
+  }
+  .mobile {
+    display: none;
+  }
 }
