--- a/src/components/Reward/Reward.module.css
+++ b/src/components/Reward/Reward.module.css
@@ -1,3 +1,32 @@
 .reward {
   display: flex;
+  flex-direction: column;
+  padding: 10px;
+  text-align: center;
+  align-items: center;
+}
+
+.rewardText {
+  font-size: 16px;
+  line-height: 30px;
+  padding: 10px;
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.text {
+  text-align: justify;
+  padding: 10px;
+}
+
+@media (min-width: 768px) {
+  .reward {
+    flex-direction: row;
+  }
+}
+
+@media (min-width: 1440px) {
 }
