--- a/src/components/SimpleSlider/SimpleSlider.module.css
+++ b/src/components/SimpleSlider/SimpleSlider.module.css
@@ -1,12 +1,37 @@
 .simpleSlider {
-  height: 400px;
-  margin-bottom: 5rem;
-}
-.item {
-  height: 400px;
+  margin: 0;
 }
 
 .slider {
   width: 100%;
   height: auto;
+}
+
+.dots {
+  display: flex !important;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 50px;
+}
+
+.dots li:not(:last-child) {
+  margin-right: 5px;
+}
+
+.dots li button {
+  height: 20px;
+  width: 20px;
+  background-color: black;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  color: transparent;
+}
+
+.arrow::before {
+  color: rgb(0, 112, 175);
+  font-size: 46px;
 }
