--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 
 *,
@@ -15,6 +16,10 @@ body {
   font-size: 16px;
   font-weight: 400;
   color: #5c6369;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  position: relative;
 }
 
 ul,
@@ -23,6 +28,14 @@ li {
   list-style: none;
 }
 
+h3 {
+  text-align: center;
+  padding: 30px;
+}
 a {
   text-decoration: none;
+}
+
+.slick-active button {
+  background-color: #3d3737 !important;
 }
