--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -4,13 +4,13 @@
 }
 
 @media (min-width: 768px) {
-  /* .container {
+  .container {
     max-width: 690px;
-  } */
+  }
 }
 
-@media (min-width: 1440px) {
-  /* .container {
-    max-width: 940px;
-  } */
+@media (min-width: 1200px) {
+  .container {
+    max-width: 990px;
+  }
 }
