--- a/src/components/Reward/Reward.module.css
+++ b/src/components/Reward/Reward.module.css
@@ -1,6 +1,7 @@
 .reward {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   padding: 10px;
   text-align: center;
   align-items: center;
