--- a/src/pages/AsyncNewsPage.module.css
+++ b/src/pages/AsyncNewsPage.module.css
@@ -18,6 +18,11 @@
 .title {
   margin-bottom: 1rem;
 }
+
+.text {
+  text-align: justify;
+}
+
 @media (min-width: 768px) {
   .news {
     grid-template-columns: 1fr 1fr;
